pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-upstream-vhost.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-upstream-vhost
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
    nginx.ingress.kubernetes.io/upstream-vhost: "upstream-host-header-value"

spec:
  ingressClassName: nginx
  rules:
    - host: upstream-vhost.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
